<resources>
    <string name="app_name">Test</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="fast_pay">Fast Pay</string>
    <string name="pay">Pay</string>
    <string name="discount">Discount</string>
    <string name="discount_short">Disc.</string>
    <string name="clear">Clear</string>
    <string name="hold_order">Hold</string>
    <string name="clear_short">C</string>
    <string name="items">Items</string>
    <string name="total">Total</string>
    <string name="total_price">Total Price</string>
    <string name="sale_price">Sale Price</string>
    <string name="enter">Enter</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="change">Change</string>
    <string name="total_due">Total Due</string>
    <string name="total_paid">Total Paid</string>
    <string name="card_no">Card No</string>
    <string name="card_holder">Card Holder</string>
    <string name="expire">Expire</string>
    <string name="done">Done</string>
    <string name="card_type">Card Type</string>
    <string name="bank">Bank</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="staff_code">Staff Code</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="modify_short">Mod</string>
    <string name="delete_short">Del</string>
    <string name="confirm_delete">Are you sure you want to delete?</string>
    <string name="confirm_cancel_order">Are you sure you want to cancel this orders?</string>
    <string name="confirm">Confirm</string>
    <string name="send_data">Send Data</string>
    <string name="report">Reports</string>
    <string name="utility">Utility</string>
    <string name="switch_user">Switch User</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="logout">Log out</string>
    <string name="select_item_to_delete">Please select item that you want to delete.</string>
    <string name="close">Close</string>
    <string name="enter_price">Enter Price</string>
    <string name="print_date">Print Date</string>
    <string name="staff">Staff</string>
    <string name="receipt_no">Receipt No.</string>
    <string name="item">Item</string>
    <string name="qty">Qty</string>
    <string name="price">Price</string>
    <string name="service_charge">Service Charge</string>
    <string name="service_charge_vat">SC. VAT</string>

</resources>
