<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_send"
        android:title="@string/send_data"
        app:showAsAction="always|withText"
        android:icon="@drawable/ic_cloud_upload_white_24dp"/>
    <item
        android:id="@+id/action_report"
        android:title="@string/report"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_utility"
        android:title="@string/utility"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_switch_user"
        android:title="@string/switch_user"
        app:showAsAction="always|withText"
        android:icon="@drawable/ic_people_outline_white_24dp"/>
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_lock_outline_white_24dp"
        android:title="@string/logout"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        android:title="@string/action_search"
        android:visible="false"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:visible="false"
        app:showAsAction="never" />
</menu>
