<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.vtec.j1tth4.vtecpos.PaymentActivity">

    <view
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        class="com.vtec.j1tth4.vtecpos.PaymentTypeSlidingTabLayout"
        android:id="@+id/paymenttype_tab"
        android:layout_toLeftOf="@+id/tvPaymentTotalPrice"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <FrameLayout
        android:layout_width="420dp"
        android:layout_height="fill_parent"
        android:layout_below="@+id/paymenttype_tab"
        android:id="@+id/paydetail_content"
        android:background="@color/grey_50"
        android:layout_marginRight="@dimen/default_horizontal_margin"
        android:layout_above="@+id/linearLayout"></FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/payment_content"
        android:layout_below="@+id/tvPaymentTotalPrice"
        android:layout_toRightOf="@+id/paydetail_content"
        android:layout_above="@+id/linearLayout">

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tvPaymentTotalPrice"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="48sp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/paydetail_content"
        android:layout_alignEnd="@+id/paydetail_content"
        android:id="@+id/linearLayout"
        android:padding="@dimen/default_horizontal_margin">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/total_paid"
                android:id="@+id/tvTotalLabel"
                android:layout_weight="1"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.00"
                android:id="@+id/tvTotalPaid"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/total_due"
                android:id="@+id/tvTotalDueLabel"
                android:layout_weight="1"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvTotalDue"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@android:color/holo_red_dark"
                android:text="0" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/change"
                android:id="@+id/tvChangeLabel"
                android:layout_weight="1"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvChange"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:text="0" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="160dp"
        android:layout_height="96dp"
        android:text="@string/confirm"
        android:id="@+id/btnPayConfirm"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/tvPaymentTotalPrice"
        android:layout_alignEnd="@+id/tvPaymentTotalPrice"
        android:onClick="onClick" />

    <Button
        android:layout_width="160dp"
        android:layout_height="96dp"
        android:text="@android:string/cancel"
        android:id="@+id/btnPayCancel"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/btnPayConfirm"
        android:layout_toStartOf="@+id/btnPayConfirm" />

</RelativeLayout>
