<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/tool_bar"
            layout="@layout/tool_bar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="@dimen/default_horizontal_margin">

            <RelativeLayout
                android:layout_width="380dp"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Table 10"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/indigo" />
                </LinearLayout>

                <FrameLayout
                    android:id="@+id/leftcontent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/linearLayout3"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/linearLayout2"
                    android:paddingLeft="@dimen/default_horizontal_margin">

                </FrameLayout>

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="center_horizontal|bottom"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnDiscount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/discount_short"
                        android:onClick="onClick"/>

                    <Button
                        android:id="@+id/btnFastPay"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/fast_pay" />

                    <Button
                        android:id="@+id/btnPay"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="onClick"
                        android:text="@string/pay" />

                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <FrameLayout
                    android:id="@+id/rightcontent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_above="@+id/orderExtraQty">

                </FrameLayout>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/orderExtraQty"
                    android:ems="7"
                    android:lines="1"
                    android:enabled="false"
                    android:layout_weight="1"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:inputType="numberDecimal" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/numericKeypadContainer"
                    android:layout_gravity="left|bottom"
                    android:layout_alignTop="@+id/orderExtraQty"
                    android:layout_toEndOf="@+id/orderExtraQty"></FrameLayout>

            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>


    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="96dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/blue_grey_900"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />
</android.support.v4.widget.DrawerLayout>